--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "juststart": "nodemon index"
+    "build": "nodemon index"
   },
   "keywords": [],
   "author": "",
